<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".subscreens.EditBookDetailsActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_circle_image_view"
            android:layout_width="210dp"
            android:layout_height="190dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/splash_icon"
            app:civ_border_color="#000000"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/edit_circle_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/circle_shape"
            app:layout_constraintBottom_toBottomOf="@+id/edit_circle_image_view"
            app:layout_constraintEnd_toEndOf="@+id/edit_circle_image_view" />

        <ImageView
            android:id="@+id/edit_photo_in_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_24"
            app:layout_constraintBottom_toBottomOf="@+id/edit_circle_background"
            app:layout_constraintEnd_toEndOf="@+id/edit_circle_background"
            app:layout_constraintStart_toStartOf="@+id/edit_circle_background"
            app:layout_constraintTop_toTopOf="@+id/edit_circle_background" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_circle_image_view" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/create_category_icon_24"
            app:layout_constraintBottom_toBottomOf="@+id/edit_category_spinner"
            app:layout_constraintStart_toStartOf="@+id/edit_book_name_edittext"
            app:layout_constraintTop_toTopOf="@+id/edit_category_spinner" />

        <Spinner
            android:id="@+id/edit_category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="@+id/edit_book_name_edittext"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="SpeakableTextPresentCheck" />


        <EditText
            android:id="@+id/edit_book_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:drawableStart="@drawable/book_edittext_item"
            android:drawablePadding="16dp"
            android:hint="@string/book_name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_category_spinner" />

        <EditText
            android:id="@+id/edit_author_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:drawableStart="@drawable/person_edittext_icon"
            android:drawablePadding="16dp"
            android:hint="@string/author_name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/edit_book_name_edittext"
            app:layout_constraintStart_toStartOf="@id/edit_book_name_edittext"
            app:layout_constraintTop_toBottomOf="@id/edit_book_name_edittext" />

        <EditText
            android:id="@+id/edit_release_num_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:drawableStart="@drawable/date_edittext_icon"
            android:drawablePadding="16dp"
            android:hint="@string/release_year"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/edit_author_name_edittext"
            app:layout_constraintStart_toStartOf="@id/edit_author_name_edittext"
            app:layout_constraintTop_toBottomOf="@id/edit_author_name_edittext" />

        <EditText
            android:id="@+id/edit_page_num_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableStart="@drawable/pagenum_edittext_icon"
            android:drawablePadding="16dp"
            android:hint="@string/pages_number"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/edit_release_num_edittext"
            app:layout_constraintStart_toStartOf="@id/edit_release_num_edittext"
            app:layout_constraintTop_toBottomOf="@id/edit_release_num_edittext" />

        <Button
            android:id="@+id/edit_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="32dp"
            android:padding="15dp"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edit_page_num_edittext"
            app:layout_constraintStart_toStartOf="@id/edit_page_num_edittext"
            app:layout_constraintTop_toBottomOf="@+id/edit_page_num_edittext" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
